# spherical-geometry

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: README.md  cli_polygon_test.rs
src/: great_circle.rs  great_circle_arc.rs  lib.rs  point.rs  polygon.rs
